src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__interval__justify_interval.snap
---
source: src/expr/src/scalar/func/impls/interval.rs
expression: "#[sqlfunc(sqlname = \"justify_interval\")]\nfn justify_interval(i: Interval) -> Result<Interval, EvalError> {\n    i.justify_interval().map_err(|_| EvalError::IntervalOutOfRange(i.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct JustifyInterval;
impl crate::func::EagerUnaryFunc for JustifyInterval {
    type Input<'a> = Interval;
    type Output<'a> = Result<Interval, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        justify_interval(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for JustifyInterval {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("justify_interval")
    }
}
fn justify_interval(i: Interval) -> Result<Interval, EvalError> {
    i.justify_interval().map_err(|_| EvalError::IntervalOutOfRange(i.to_string().into()))
}
